--- a/src/routes/User/User.css
+++ b/src/routes/User/User.css
@@ -52,7 +52,7 @@
 }
 
 .content {
-  flex: 7 0 auto;
+  flex: 7 0 150%;
   background-color: rgba(0, 0, 0, 0.01);
 }
 
